# kubernetes-typed

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pull_request.yml  release.yml
crd_typed/: __init__.py  plugin.py
docs/: desgin.md  developing.md
kubernetes-stubs/: __init__.py  __init__.pyi
kubernetes-stubs/client/: __init__.pyi  api_client.pyi  configuration.pyi  exceptions.pyi  rest.pyi
kubernetes-stubs/config/: __init__.pyi  config_exception.pyi  dateutil.pyi  exec_provider.pyi  exec_provider_test.pyi  incluster_config.pyi  incluster_config_test.pyi  kube_config.pyi  kube_config_test.pyi
kubernetes-stubs/dynamic/: __init__.pyi  client.pyi  discovery.pyi  exceptions.pyi  resource.pyi  test_client.pyi
kubernetes-stubs/e2e_test/: base.pyi  port_server.pyi  test_apps.pyi  test_batch.pyi  test_client.pyi  test_utils.pyi  test_watch.pyi
kubernetes-stubs/leaderelection/: __init__.pyi  electionconfig.pyi  example.pyi  leaderelection.pyi  leaderelection_test.pyi  leaderelectionrecord.pyi
kubernetes-stubs/stream/: __init__.pyi  stream.pyi  ws_client.pyi  ws_client_test.pyi
kubernetes-stubs/test/: test_api_client.pyi  test_configuration.pyi
kubernetes-stubs/utils/: __init__.pyi  create_from_yaml.pyi  quantity.pyi
kubernetes-stubs/watch/: __init__.pyi  watch.pyi  watch_test.pyi
kubernetes_typed/: __init__.py  plugin.py
scripts/: __init__.py  generate_utils.py  stubgen.py  typeddictgen.py
(+1514 files in other folders)
